--- a/admin-world/src/common/css/common.scss
+++ b/admin-world/src/common/css/common.scss
@@ -13,3 +13,7 @@ html {
     box-sizing: border-box;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
+
+.com-hand{
+    cursor: pointer;
+}
